# myutils

./: .gitignore  Makefile.am  configure.ac
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  files
src/: Makefile.am  QUOTES.new  QUOTES.old  apt-repo  bk  daucau.py  daucau2.py  daumoi  flac2mp3  fp  gnome  hidden  irs  moi_cu  mydic  notes  sites-manager  test  tm  tong  toxml  ubk  ud  vnconv  xrp
