dist_bin_SCRIPTS = \
					apt-repo \
					bk \
					daucau.py \
					daucau2.py \
					fp \
					gnome \
					hidden \
					irs \
					mydic \
					notes \
					sites-manager \
					tong \
					tm \
					ubk \
					ud \
					vnconv \
					xrp

seddir = $(docdir)/xrp
sed_DATA = QUOTES.old QUOTES.new moi_cu
EXTRA_DIST = $(sed_DATA)
